mdapi-source/UP2GO_ITE/objects/CompensationRate__c.object
<CustomObject>
    <description>Various rates to reimburse dependant expense types e.g. travels with private vehicles etc.</description>
    <label>Compensation Rate</label>
    <nameField>
        <label>Compensation Rate Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Compensation Rates</pluralLabel>
    <sharingModel>Read</sharingModel>
    <fields>
        <fullName>cur_FullDailyRate__c</fullName>
        <label>Full Daily Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>cur_HalfDayAllowanceRate__c</fullName>
        <inlineHelpText>For less than 8 hours absence.</inlineHelpText>
        <label>Half Day Allowance Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>cur_MilageAllowance__c</fullName>
        <label>Milage Allowance (per km)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>cur_OvernightStayRate__c</fullName>
        <label>Overnight Stay Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>cur_PartialDailyRate__c</fullName>
        <label>Partial Daily Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pct_FullDayAllowanceRate__c</fullName>
        <inlineHelpText>For more than 8 hours absence.</inlineHelpText>
        <label>Full Day Allowance Rate</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>pkl_ValidForCountry__c</fullName>
        <label>Valid For Country</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>gpkl_IsoCountryCode</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>txt_CityName__c</fullName>
        <inlineHelpText>Only enter a city if there are special rates for this specific city.</inlineHelpText>
        <label>City Name (optional)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>txt_CountryCode__c</fullName>
        <description>The Country Code of the Country using the ISO 3166-1 alpha-2 Code.</description>
        <inlineHelpText>Enter the &quot;ISO 2 Letter Country Code&quot; for this country.</inlineHelpText>
        <label>Country Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>txt_CountryName__c</fullName>
        <label>Country Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <recordTypes>
        <fullName>Location</fullName>
        <active>true</active>
        <description>Daily rates for calculating per Diem compensation</description>
        <label>Location</label>
    </recordTypes>
    <recordTypes>
        <fullName>Meal</fullName>
        <active>true</active>
        <description>Rates for calculating the exact per Diem reimbursement</description>
        <label>Meal</label>
    </recordTypes>
    <recordTypes>
        <fullName>Vehicle</fullName>
        <active>true</active>
        <description>Milage rate for calculating compensation for travels with an private vehicle</description>
        <label>Vehicle</label>
    </recordTypes>
    <listViews>
        <fullName>Locations</fullName>
        <columns>txt_CountryName__c</columns>
        <columns>txt_CityName__c</columns>
        <columns>txt_CountryCode__c</columns>
        <columns>cur_FullDailyRate__c</columns>
        <columns>cur_PartialDailyRate__c</columns>
        <columns>cur_OvernightStayRate__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>CompensationRate__c.Location</value>
        </filters>
        <label>Locations</label>
    </listViews>
    <listViews>
        <fullName>Meals</fullName>
        <columns>NAME</columns>
        <columns>pct_FullDayAllowanceRate__c</columns>
        <columns>cur_HalfDayAllowanceRate__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>CompensationRate__c.Meal</value>
        </filters>
        <label>Meals</label>
    </listViews>
    <listViews>
        <fullName>Vehicles</fullName>
        <columns>NAME</columns>
        <columns>cur_MilageAllowance__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>CompensationRate__c.Vehicle</value>
        </filters>
        <label>Vehicles</label>
    </listViews>
</CustomObject>